--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<section>
+						Collaborating with Git, Github and
+						     Working with Github Pages
+					</section>
+					<section>
+						Webinar by Deepansh Arya
+					</section>
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
