--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+o<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -18,8 +18,11 @@
 			<div class="slides">
 				<section>
 					<section>
-						Collaborating with Git, Github and
-						     Working with Github Pages
+						     Reload the link
+						    bit.ly/pdmworkshop 
+						       at 1:45 p.m.
+							   on 
+						Monday, January 24, 2022.
 					</section>
 					<section>
 						Webinar by Deepansh Arya
