--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ o<!doctype html>
 				<section>
 					<section>
 						     Reload the link
-						    bit.ly/pdmworkshop 
+						    bit.ly/pdm_workshop 
 						       at 1:45 p.m.
 							   on 
 						Monday, January 24, 2022.
