--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ o<!doctype html>
 					<section>
 						     Reload the link
 						    bit.ly/pdm_workshop 
-						       at 1:45 p.m.
+						      after 1:45 p.m.
 							   on 
 						Monday, January 24, 2022.
 					</section>
