--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ o<!doctype html>
 			<div class="slides">
 				<section>
 					<section>
-						     Reload the link
+						     Reload the link -->
 						    bit.ly/pdm_workshop 
 						      after 1:45 p.m.
 							   on 
